# grotto.chat

./: .gitignore  AGENTS.md  CHANGELOG.md  ICE-PLAN.md  README.md  ROADMAP.md  TODO.md  UX-PLAN.md  install.sh
dev_docs/: INSTALLER-PLAN.md  (+1 more)
grotto-chat-cli/: CMakeLists.txt  PLAN.md  README.md
grotto-chat-cli/src/: command.hpp  command_context.cpp  command_context.hpp  command_registry.cpp  command_registry.hpp  main.cpp
grotto-chat-cli/src/commands/: ban.cpp  commands.hpp  help.cpp  kick.cpp  logtail.cpp  restart.cpp  shutdown.cpp  status.cpp  tui.cpp  update.cpp  users.cpp  version.cpp
grotto-chat-client/: BUGS.md  CMakeLists.txt  HOW-TO-BUILD.md  README.md  TODO.md  TODOS.md  build.cmd  build.sh  install-client.cmd  vcpkg.json
grotto-chat-client/build-old/: Makefile  compile_commands.json  test-config  test-input-line  version.hpp
grotto-chat-client/build-old-1/: version.hpp
grotto-chat-client/cmake/: functions.cmake
grotto-chat-client/config/: client.toml.example
grotto-chat-client/docs/: RNNOISE-MODEL.md  dm-decryption-analysis.md  error-scenario-qa.md
grotto-chat-client/help/: commands.md  crypto.md  help.md
grotto-chat-client/help/en/: commands.md  files.md  help.md  shortcuts.md  transfers.md  voice.md
grotto-chat-client/help/fi/: channels.md  commands.md  files.md  help.md  shortcuts.md  transfers.md  voice.md
grotto-chat-client/scripts/: export-rnnoise-model.py  run-error-qa.ps1  run-error-qa.sh
grotto-chat-client/src/: app.cpp  app.hpp  config.cpp  config.hpp  connection_status.cpp  connection_status.hpp  main.cpp
grotto-chat-client/src/crypto/: crypto_engine.cpp  crypto_engine.hpp  group_session.cpp  group_session.hpp  identity.cpp  identity.hpp  signal_store.cpp  signal_store.hpp
grotto-chat-client/src/db/: local_store.cpp  local_store.hpp  migrations.cpp  migrations.hpp
grotto-chat-client/src/file/: file_transfer.cpp  file_transfer.hpp
grotto-chat-client/src/help/: help_manager.cpp  help_manager.hpp
grotto-chat-client/src/i18n/: strings.cpp  strings.hpp
grotto-chat-client/src/input/: command_parser.cpp  command_parser.hpp  input_handler.hpp  tab_complete.cpp  tab_complete.hpp
grotto-chat-client/src/net/: message_handler.cpp  message_handler.hpp  net_client.cpp  net_client.hpp
grotto-chat-client/src/preview/: link_previewer.cpp  link_previewer.hpp
grotto-chat-client/src/proto/: grotto.proto
grotto-chat-client/src/runtime/: runtime_capabilities.cpp  runtime_capabilities.hpp
grotto-chat-client/src/state/: app_state.cpp  app_state.hpp  channel_state.hpp  voice_state.hpp
grotto-chat-client/src/ui/: color_scheme.hpp  files_panel.cpp  files_panel.hpp  graphics_compositor.cpp  graphics_compositor.hpp  graphics_layout.cpp  graphics_layout.hpp  input_line.cpp  input_line.hpp  key_name.hpp  layout.cpp  layout.hpp  link_preview.cpp  link_preview.hpp  login_screen.cpp  login_screen.hpp  markdown_renderer.cpp  markdown_renderer.hpp  message_view.cpp  message_view.hpp  modal_overlay.hpp  mouse_support.cpp  mouse_support.hpp  settings_categories_general.cpp  settings_categories_misc.cpp  settings_categories_voice.cpp  settings_layout.cpp  settings_layout.hpp  settings_screen.cpp  settings_screen.hpp  status_bar.cpp  status_bar.hpp  tab_bar.cpp  tab_bar.hpp  terminal_image.cpp  terminal_image.hpp  ui_manager.cpp  ui_manager.hpp  user_list_panel.cpp  user_list_panel.hpp
grotto-chat-client/src/voice/: audio_device.cpp  audio_device.hpp  jitter_buffer.cpp  jitter_buffer.hpp  limiter.cpp  limiter.hpp  noise_suppressor.cpp  noise_suppressor.hpp  opus_codec.cpp  opus_codec.hpp  pcm_sample_fifo.hpp  voice_activity_gate.hpp  voice_engine.cpp  voice_engine.hpp  voice_mode.hpp  voice_peer_role.hpp
grotto-chat-client/tests/: test_command_parser.cpp  test_config.cpp  test_connection_status.cpp  test_file_transfer.cpp  test_input_line.cpp  test_noise_suppressor.cpp  test_signal_prekey_roundtrip.cpp  test_voice_helpers.cpp
grotto-chat-installer/: CMakeLists.txt  README.md
grotto-chat-installer/assets/: installer-manifest.example.json
grotto-chat-installer/src/: app.cpp  app.hpp  main.cpp  manifest.cpp  manifest.hpp  model.hpp
grotto-chat-installer/src/install/: installer.cpp  installer.hpp
grotto-chat-installer/src/system/: system.cpp  system.hpp
grotto-chat-plugin/: CMakeLists.txt  PLAN.md  README.md
grotto-chat-plugin/examples/dicebot/: main.js  plugin.json
grotto-chat-plugin/src/: bot_plugin_instance.cpp  client_ext_plugin.cpp  js_api.cpp  js_timers.cpp  plugin_instance.cpp  plugin_manager.cpp  plugin_meta.cpp  server_ext_plugin.cpp
grotto-chat-plugin/tests/: test_plugin.cpp
grotto-chat-server/: CMakeLists.txt  README.md  SERVER_ANALYSIS.md  vcpkg.json
grotto-chat-server-api/: CMakeLists.txt  INTEGRATION.md  PLAN.md  README.md
grotto-chat-server-api/examples/: bug_report_example.cpp
grotto-chat-server-api/src/: auth.cpp  middleware.cpp  request.cpp  response.cpp  router.cpp  server.cpp  types.cpp
grotto-chat-server-api/tests/: test_router.cpp  test_server.cpp
grotto-chat-server/cmake/: functions.cmake
grotto-chat-server/config/: server.toml.example
grotto-chat-server/docs/: client-architecture.md  letsencrypt-setup.md  server-architecture.md
grotto-chat-server/docs/android/: architecture.md  design-tokens.md  wireframes.md
grotto-chat-server/docs/plans/: ADMIN_RESERVED_PLAN.md
grotto-chat-server/scripts/: README.md  install-ice.sh  install-legacy-build.sh  install.sh
grotto-chat-server/src/: config.cpp  config.hpp  main.cpp  server.cpp  server.hpp  server_config.hpp
grotto-chat-server/src/admin/: reserved_identity.cpp  reserved_identity.hpp  server_owner.cpp  server_owner.hpp
grotto-chat-server/src/channel/: channel_manager.cpp  channel_manager.hpp
grotto-chat-server/src/commands/: command_handler.cpp  command_handler.hpp
grotto-chat-server/tests/: test_channel_utils.cpp  test_checksum_utils.cpp  test_file_encryptor.cpp  test_file_store.cpp  test_reserved_identity.cpp  test_virus_scanner.cpp
grotto-daemon/: CMakeLists.txt
grotto-daemon/examples/: demo.cpp
grotto-daemon/src/: grotto.cpp
(+291 files in other folders)
